--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <title>Just Snippets</title>
+    <!--ssr-head-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root"><!--ssr-body--></div>
 
-    <script src="/src/index.tsx" type="module"></script>
+    <script src="/src/entry-client.tsx" type="module"></script>
   </body>
 </html>
