--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"><!--ssr-body--></div>
+    <div id="app"><!--ssr-body--></div>
 
     <script src="/src/entry-client.tsx" type="module"></script>
   </body>
